// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 column stacking 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-2 column stacking23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="2 column stacking23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="2 column stacking-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-6"
        id="bl-b123456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="b123456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="b1-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
              id="bl-tile_one23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                }
              }
            >
              <div
                className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                id="tile_one23456"
              >
                tile_one23456
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-18"
        id="bl-b223456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="b223456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="b2-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {\\"style\\":{\\"height\\":40}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
              id="bl-tile_two23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                }
              }
            >
              <div
                className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                id="tile_two23456"
              >
                tile_two23456
              </div>
            </div>
            <div
              className="ant-col {\\"style\\":{\\"height\\":20}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
              id="bl-tile_three23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                }
              }
            >
              <div
                className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                id="tile_three23456"
              >
                tile_three23456
              </div>
            </div>
            <div
              className="ant-col {\\"style\\":{\\"height\\":30}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
              id="bl-tile_four23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                }
              }
            >
              <div
                className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                id="tile_four23456"
              >
                tile_four23456
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-4 block grid23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="4 block grid23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="4 block grid-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_one23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_one23456"
        >
          tile_one23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_two23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_two23456"
        >
          tile_two23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_three23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_three23456"
        >
          tile_three23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_four23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_four23456"
        >
          tile_four23456
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with gutter 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-4 block grid with gutter23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="4 block grid with gutter23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="4 block grid with gutter-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "marginBottom": -25,
          "marginLeft": -25,
          "marginRight": -25,
          "marginTop": -25,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_one23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 25,
            "paddingLeft": 25,
            "paddingRight": 25,
            "paddingTop": 25,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_one23456"
        >
          tile_one23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_two23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 25,
            "paddingLeft": 25,
            "paddingRight": 25,
            "paddingTop": 25,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_two23456"
        >
          tile_two23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_three23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 25,
            "paddingLeft": 25,
            "paddingRight": 25,
            "paddingTop": 25,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_three23456"
        >
          tile_three23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_four23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 25,
            "paddingLeft": 25,
            "paddingRight": 25,
            "paddingTop": 25,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_four23456"
        >
          tile_four23456
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with various heights 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-4 block grid with various heights23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="4 block grid with various heights23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="4 block grid with various heights-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_one23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_one23456"
        >
          tile_one23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":40}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_two23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_two23456"
        >
          tile_two23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":20}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_three23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_three23456"
        >
          tile_three23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":30}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_four23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_four23456"
        >
          tile_four23456
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 sequential blocks 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-4 sequential blocks23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="4 sequential blocks23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="4 sequential blocks-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tile_one23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_one23456"
        >
          tile_one23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tile_two23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_two23456"
        >
          tile_two23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tile_three23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_three23456"
        >
          tile_three23456
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tile_four23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_four23456"
        >
          tile_four23456
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`typical dashboard 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-typical dashboard23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="typical dashboard23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="typical dashboard-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
        id="bl-tile_one23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_one23456"
        >
          tile_one23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
        id="bl-tile_two23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_two23456"
        >
          tile_two23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
        id="bl-tile_three23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_three23456"
        >
          tile_three23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_four23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_four23456"
        >
          tile_four23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
        id="bl-tile_five23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_five23456"
        >
          tile_five23456
        </div>
      </div>
      <div
        className="ant-col {\\"style\\":{\\"height\\":80}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tile_six23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
            "paddingBottom": 5,
            "paddingLeft": 5,
            "paddingRight": 5,
            "paddingTop": 5,
          }
        }
      >
        <div
          className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
          id="tile_six23456"
        >
          tile_six23456
        </div>
      </div>
    </div>
  </div>
</div>
`;
